<resources>
    <string name="app_name">QuizApplication</string>
    <string name="Welcome">Welcome to the Quiz application.If you are ready,Please start</string>
    <string name="Start">Submit</string>
    <string name="Q1Tag">Question1:</string>
    <string name="Q1">Actual Question 1</string>
    <string name="AnsTag">Answer:</string>
    <string name="Ans1">Option A</string>
    <string name="Ans2">Option B</string>
    <string name="Ans3">Option C</string>
    <string name="Ans4">Option D</string>
    <string name="Next">Next</string>
    <string name="ThankYou">Hope you had fun answering the Quiz.Thank you for using the app.</string>
    <string name="YourScore">Your score is:</string>
    <string name="O">0</string>
    <string name="Calculate">Click here to find out the score</string>
    <string name="Share">Share</string>

</resources>
